# tp_cxx_grpc_sync

./: .gitignore  .pmfp_template.json  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.bak  README copy.md  README.md  conanfile.txt
.devcontainer/: devcontainer.json
pbschema/: echo.proto  echo.proto_bak
src/: echo.cc  echo_serv.cc  echo_serv.h  main.cc  serv.cc
src copy/: echo.grpc.pb.cc  echo.grpc.pb.h  echo.pb.cc  echo.pb.h
